--- a/POSMOVIL/VTSVISOR.html
+++ b/POSMOVIL/VTSVISOR.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Ventas – Administrador</title>
+  <title>Panel de Ventas – Rutas Venta</title>
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
     import { 
@@ -25,23 +25,22 @@
 
     // ---- CARGAR TODAS LAS VENTAS ----
     async function cargarVentas() {
-      const tabla = document.getElementById("tabla");
-      tabla.innerHTML = `
-        <tr>
-          <th>Seleccionar</th>
-          <th>ID Documento</th>
-          <th>Datos</th>
-        </tr>`;
+      const contenedor = document.getElementById("cards");
+      contenedor.innerHTML = `<p style="text-align:center;color:#555;">Cargando ventas...</p>`;
       const snapshot = await getDocs(rutasRef);
+      contenedor.innerHTML = "";
       snapshot.forEach(docu => {
-        const fila = document.createElement("tr");
+        const card = document.createElement("div");
+        card.className = "card";
         const datos = JSON.stringify(docu.data(), null, 2);
-        fila.innerHTML = `
-          <td><input type="checkbox" class="chk" value="${docu.id}"></td>
-          <td>${docu.id}</td>
-          <td><pre>${datos}</pre></td>
+        card.innerHTML = `
+          <div class="card-header">
+            <input type="checkbox" class="chk" value="${docu.id}">
+            <span class="doc-id">${docu.id}</span>
+          </div>
+          <pre>${datos}</pre>
         `;
-        tabla.appendChild(fila);
+        contenedor.appendChild(card);
       });
       document.getElementById("total").innerText = snapshot.size;
     }
@@ -71,56 +70,122 @@
 
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f4f7fb;
-      padding: 20px;
+      font-family: "Poppins", Arial, sans-serif;
+      background: #f0f4f9;
+      margin: 0;
+      padding: 0;
     }
-    h2 {
-      color: #00416A;
-      text-align: center;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      background: white;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      margin-top: 15px;
-    }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 8px;
-      vertical-align: top;
-    }
-    th {
-      background: #00416A;
+    header {
+      background: linear-gradient(90deg, #00416A, #0c6cbd);
       color: white;
+      padding: 1.2rem 2rem;
+      text-align: center;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
     }
-    pre {
-      font-family: monospace;
-      white-space: pre-wrap;
-      word-break: break-all;
+    header h1 { margin: 0; font-weight: 600; }
+    main {
+      padding: 20px;
+      max-width: 1200px;
+      margin: auto;
+    }
+    .info-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-bottom: 20px;
+    }
+    .info-bar span {
+      color: #333;
+      font-weight: 500;
     }
     button {
       background: #c62828;
       color: white;
       border: none;
-      border-radius: 5px;
-      padding: 8px 14px;
+      border-radius: 8px;
+      padding: 10px 20px;
+      font-size: 15px;
       cursor: pointer;
-      margin-top: 10px;
+      transition: background 0.3s;
     }
-    button:hover {
-      background: #8e0000;
+    button:hover { background: #8e0000; }
+
+    /* GRID DE TARJETAS */
+    #cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+      gap: 16px;
+    }
+
+    .card {
+      background: white;
+      border-radius: 14px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.12);
+      padding: 12px;
+      transition: transform 0.2s, box-shadow 0.2s;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .card:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 10px 20px rgba(0,0,0,0.18);
+    }
+
+    .card-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 8px;
+    }
+
+    .card-header input[type="checkbox"] {
+      transform: scale(1.3);
+      accent-color: #0c6cbd;
+    }
+
+    .doc-id {
+      font-size: 13px;
+      color: #0c6cbd;
+      font-weight: 600;
+      word-break: break-all;
+      margin-left: 8px;
+      flex: 1;
+    }
+
+    pre {
+      background: #f8f9fa;
+      border-radius: 8px;
+      padding: 8px;
+      font-family: monospace;
+      font-size: 13px;
+      color: #222;
+      white-space: pre-wrap;
+      word-break: break-word;
+      overflow-x: auto;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 13px;
+      color: #777;
     }
   </style>
 </head>
 <body>
-  <h2>Panel de Ventas – Rutas Venta</h2>
-  <p>Total de documentos: <span id="total">0</span></p>
-  <button onclick="eliminarSeleccionados()">🗑️ Eliminar seleccionados</button>
-
-  <table id="tabla">
-    <tr><th>Seleccionar</th><th>ID Documento</th><th>Datos</th></tr>
-  </table>
+  <header>
+    <h1>Panel de Ventas – Rutas Venta</h1>
+  </header>
+  <main>
+    <div class="info-bar">
+      <span>Total de documentos: <strong id="total">0</strong></span>
+      <button onclick="eliminarSeleccionados()">🗑️ Eliminar seleccionados</button>
+    </div>
+    <div id="cards"></div>
+  </main>
+  <footer>© 2025 PROVSOFT – Administración de Ventas</footer>
 </body>
 </html>
