--- a/POSMOVIL/VTSVISOR.html
+++ b/POSMOVIL/VTSVISOR.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Panel de Ventas – Rutas Venta</title>
+  <meta charset="UTF-8" />
+  <title>Panel de Ventas – Formato Ticket</title>
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import {
-      getFirestore, collection, getDocs, doc, deleteDoc
+    import { 
+      getFirestore, collection, getDocs, doc, deleteDoc 
     } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
     // ---- CONFIG FIREBASE ----
@@ -23,192 +23,171 @@
     const db = getFirestore(app);
     const rutasRef = collection(db, "rutas_venta");
 
-    // ---- FORMATEADORES ----
     const formatDate = (ts) => {
-      if (!ts || !ts.seconds) return "Sin fecha";
+      if (!ts?.seconds) return "Sin fecha";
       const d = new Date(ts.seconds * 1000);
       return d.toLocaleString("es-MX", { dateStyle: "short", timeStyle: "short" });
     };
+    const money = n => n ? `$${Number(n).toFixed(2)}` : "$0.00";
 
-    const formatMoney = (n) =>
-      n !== undefined ? `$${Number(n).toLocaleString("es-MX", { minimumFractionDigits: 2 })}` : "-";
-
-    // ---- CARGAR VENTAS ----
+    // ---- CARGAR ----
     async function cargarVentas() {
-      const contenedor = document.getElementById("cards");
-      contenedor.innerHTML = `<p style="text-align:center;color:#555;">Cargando ventas...</p>`;
-      const snapshot = await getDocs(rutasRef);
+      const cont = document.getElementById("tickets");
+      cont.innerHTML = "<p style='text-align:center'>Cargando ventas...</p>";
+
+      const snap = await getDocs(rutasRef);
       let ventas = [];
+      snap.forEach(d => ventas.push({ id: d.id, ...d.data() }));
+      ventas.sort((a,b)=> (b.fecha?.seconds||0)-(a.fecha?.seconds||0)); // más reciente primero
+      cont.innerHTML = "";
 
-      snapshot.forEach(docu => {
-        const data = docu.data();
-        ventas.push({ id: docu.id, ...data });
-      });
-
-      // Ordenar por fecha (descendente)
-      ventas.sort((a, b) => (b.fecha?.seconds || 0) - (a.fecha?.seconds || 0));
-
-      contenedor.innerHTML = "";
       ventas.forEach(v => {
-        const card = document.createElement("div");
-        card.className = "card";
-        card.innerHTML = `
-          <div class="card-header">
-            <input type="checkbox" class="chk" value="${v.id}">
-            <span class="doc-id">${v.id}</span>
-          </div>
-          <div class="card-body">
-            <h3>${v.cliente || "SIN CLIENTE"}</h3>
+        const productos = v.detalle?.map(p => `
+          <tr>
+            <td>${p.cantidad || 0}</td>
+            <td>${p.nombre || "–"}</td>
+            <td style="text-align:right">${money(p.importe || p.precio_unit)}</td>
+          </tr>
+        `).join("") || "<tr><td colspan=3>Sin detalle</td></tr>";
+
+        const ticket = document.createElement("div");
+        ticket.className = "ticket";
+        ticket.innerHTML = `
+          <div class="ticket-head">
+            <div class="idbox">
+              <input type="checkbox" class="chk" value="${v.id}">
+              <span class="folio">${v.folio || v.id}</span>
+            </div>
+            <h2>La Proveedora - Ticket de Venta</h2>
+            <p><strong>Folio:</strong> ${v.folio || "N/A"}</p>
             <p><strong>Fecha:</strong> ${formatDate(v.fecha)}</p>
-            <p><strong>Ruta:</strong> ${v.rutaId || "–"} | <strong>Atendió:</strong> ${v.atendio || v.usuario || "–"}</p>
-            <p><strong>Forma de pago:</strong> ${v.metodo_pago || "–"}</p>
-            <p><strong>Subtotal:</strong> ${formatMoney(v.subtotal)} | <strong>Impuestos:</strong> ${formatMoney(v.impuestos)} | <strong>Total:</strong> ${formatMoney(v.total || v.recibido)}</p>
-            <p><strong>Corteado:</strong> ${v.corteado ? "✅ Sí" : "❌ No"}</p>
+            <p><strong>Vendedor:</strong> ${v.atendio || v.usuario || "–"}</p>
+            <p><strong>Ruta:</strong> ${v.rutaId || "–"}</p>
+            <p><strong>Cliente:</strong> ${v.cliente || v.cliente_info?.nombre || "PUBLICO EN GENERAL"}</p>
+            <p><strong>Método de Pago:</strong> ${v.metodo_pago || "–"}</p>
+          </div>
+
+          <table class="detalle">
+            <thead><tr><th>Cant.</th><th>Producto</th><th>Importe</th></tr></thead>
+            <tbody>${productos}</tbody>
+          </table>
+
+          <div class="totales">
+            <p><strong>Subtotal:</strong> ${money(v.subtotal)}</p>
+            <p><strong>Impuestos:</strong> ${money(v.impuestos)}</p>
+            <p><strong>Total:</strong> ${money(v.total || v.recibido)}</p>
           </div>
         `;
-        contenedor.appendChild(card);
+        cont.appendChild(ticket);
       });
+
       document.getElementById("total").innerText = ventas.length;
     }
 
-    // ---- ELIMINAR SELECCIONADOS ----
+    // ---- ELIMINAR ----
     async function eliminarSeleccionados() {
       const checks = document.querySelectorAll(".chk:checked");
-      if (checks.length === 0) {
-        alert("Selecciona al menos una venta para eliminar");
-        return;
-      }
-      if (!confirm(`¿Eliminar ${checks.length} ventas seleccionadas?`)) return;
+      if (checks.length === 0) return alert("Selecciona al menos una venta para eliminar");
+      if (!confirm(`¿Eliminar ${checks.length} venta(s)?`)) return;
 
       for (const chk of checks) {
-        const id = chk.value;
-        const ref = doc(db, "rutas_venta", id);
-        await deleteDoc(ref);
+        await deleteDoc(doc(db, "rutas_venta", chk.value));
       }
-
       alert("Ventas eliminadas correctamente");
       cargarVentas();
     }
 
-    window.eliminarSeleccionados = eliminarSeleccionados;
     window.onload = cargarVentas;
+    window.eliminarSeleccionados = eliminarSeleccionados;
   </script>
 
   <style>
     body {
-      font-family: 'Poppins', Arial, sans-serif;
-      background: #eef2f7;
+      font-family: "Poppins", Arial, sans-serif;
+      background: #f3f5fa;
       margin: 0;
-      padding: 0;
     }
-
     header {
-      background: linear-gradient(90deg, #00416A, #0c6cbd);
-      color: #fff;
-      padding: 1.2rem 2rem;
+      background: linear-gradient(90deg,#00416A,#0c6cbd);
+      color: white;
+      padding: 1.2rem;
       text-align: center;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      box-shadow: 0 3px 10px rgba(0,0,0,.2);
     }
-
-    header h1 {
-      margin: 0;
-      font-weight: 600;
-      letter-spacing: 0.5px;
-    }
-
+    header h1 {margin:0;font-weight:600;}
     main {
       padding: 20px;
-      max-width: 1300px;
-      margin: auto;
+      max-width: 1200px;
+      margin:auto;
     }
-
     .info-bar {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      flex-wrap: wrap;
       margin-bottom: 20px;
+      flex-wrap: wrap;
     }
-
-    .info-bar span {
-      color: #333;
-      font-size: 16px;
-    }
-
     button {
       background: #c62828;
       color: white;
       border: none;
-      border-radius: 8px;
       padding: 10px 20px;
-      font-size: 15px;
+      border-radius: 8px;
       cursor: pointer;
-      transition: background 0.3s;
-      box-shadow: 0 3px 8px rgba(0,0,0,0.2);
+      box-shadow: 0 3px 6px rgba(0,0,0,0.2);
     }
+    button:hover { background: #8e0000; }
 
-    button:hover {
-      background: #8e0000;
-    }
-
-    #cards {
+    #tickets {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(340px, 1fr));
-      gap: 16px;
+      gap: 20px;
     }
 
-    .card {
+    .ticket {
       background: white;
-      border-radius: 16px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      padding: 14px 18px;
-      transition: all 0.2s ease;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,.1);
+      padding: 14px;
+      transition: .2s;
+    }
+    .ticket:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 6px 18px rgba(0,0,0,.15);
     }
 
-    .card:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 6px 18px rgba(0,0,0,0.15);
-    }
+    .ticket-head {border-bottom: 1px solid #ddd; margin-bottom: 8px; padding-bottom: 5px;}
+    .ticket-head h2 {margin:5px 0 10px;color:#00416A;font-size:16px;}
+    .ticket-head p {margin:2px 0;font-size:13px;color:#333;}
+    .idbox {display:flex;align-items:center;gap:6px;}
+    .idbox input {transform:scale(1.2);}
+    .folio {font-size:12px;color:#0c6cbd;font-weight:600;}
 
-    .card-header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      margin-bottom: 10px;
+    table.detalle {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 5px;
     }
-
-    .card-header input[type="checkbox"] {
-      transform: scale(1.3);
-      accent-color: #0c6cbd;
-    }
-
-    .doc-id {
-      font-size: 12px;
-      color: #0c6cbd;
-      font-weight: 600;
-      word-break: break-all;
-      margin-left: 8px;
-      flex: 1;
-    }
-
-    .card-body h3 {
-      margin: 0 0 6px;
-      color: #00416A;
-      font-size: 17px;
-    }
-
-    .card-body p {
-      margin: 3px 0;
-      font-size: 14px;
-      color: #333;
-    }
-
-    footer {
-      text-align: center;
-      padding: 15px;
+    table.detalle th {
+      background: #0c6cbd;
+      color: white;
+      font-weight: 500;
       font-size: 13px;
-      color: #777;
+      padding: 4px;
     }
+    table.detalle td {
+      border-bottom: 1px solid #eee;
+      padding: 4px;
+      font-size: 13px;
+    }
+
+    .totales {
+      border-top: 1px solid #ddd;
+      margin-top: 5px;
+      text-align: right;
+      font-size: 14px;
+    }
+    .totales p {margin:3px 0;}
   </style>
 </head>
 <body>
@@ -220,8 +199,7 @@
       <span>Total de documentos: <strong id="total">0</strong></span>
       <button onclick="eliminarSeleccionados()">🗑️ Eliminar seleccionados</button>
     </div>
-    <div id="cards"></div>
+    <div id="tickets"></div>
   </main>
-  <footer>© 2025 PROVSOFT – Administración de Ventas</footer>
 </body>
 </html>
