--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
   <div class="apps">
     <a href="POSMOVIL/RETICKES.html">🔎 Retickets </a>
   </div>
+   <div class="apps">
+    <a href="POSMOVIL/REGENERALVENTAS.html">🔎 Reporte Ventas </a>
+  </div>
 
   <footer>
     Powered by <b>PROVSOFT</b>
