--- a/POSMOVIL/index.html
+++ b/POSMOVIL/index.html
@@ -1154,57 +1154,6 @@ function imprimirTicketEstilado(){
   window.print();
   ticket.style.display = "none";
 }
-
-
-  // ==== Reimpresión ====
-  const modalReimp=document.getElementById('modalReimp');
-  const btnReimprimir=document.getElementById('btnReimprimir');
-  const btnCerrarReimp=document.getElementById('btnCerrarReimp');
-  const btnBuscarTickets=document.getElementById('btnBuscarTickets');
-  const filtroFolio=document.getElementById('filtroFolio');
-  const filtroFecha=document.getElementById('filtroFecha');
-  const listaTickets=document.getElementById('listaTickets');
-  const lblPagina=document.getElementById('lblPagina');
-  let _tickets=[],_pagina=1; const _porPag=10;
-
-  function abrirReimp(){ document.body.classList.add('modal-open'); modalReimp.style.display='flex'; _pagina=1; buscarTickets(); }
-  function cerrarReimp(){ modalReimp.style.display='none'; document.body.classList.remove('modal-open'); }
-
-  btnReimprimir.addEventListener('click', abrirReimp);
-  btnCerrarReimp.addEventListener('click', cerrarReimp);
-
-async function buscarTickets(){
-  listaTickets.innerHTML="Buscando...";
-  const ventasRef = collection(db, "rutas_venta");
-  const qv = query(ventasRef, where("rutaId", "==", rutaId), orderBy("fecha", "desc"), limit(50));
-  const snap = await getDocs(qv);
-  _tickets = [];
-  snap.forEach(s => { const v = s.data(); _tickets.push({ id: s.id, ...v }); });
-  renderListaTickets();
-}
-
-
-  function renderListaTickets(){
-    listaTickets.innerHTML="";
-    const ini=(_pagina-1)*_porPag, fin=ini+_porPag;
-    const page=_tickets.slice(ini,fin);
-    lblPagina.textContent=`${_pagina}/${Math.ceil(_tickets.length/_porPag)||1}`;
-    page.forEach(t=>{
-      const row=document.createElement('div');
-      row.innerHTML=`
-        <div><b>${t.folio}</b> – ${t.cliente||'Mostrador'} – ${money(t.total)}</div>
-        <button class="btn" data-id="${t.id}">Imprimir</button>`;
-      listaTickets.appendChild(row);
-    });
-  }
-  listaTickets.addEventListener('click',async(e)=>{
-    const btn=e.target.closest('button[data-id]'); if(!btn)return;
-    const id=btn.getAttribute('data-id');
-    const ref = doc(db, "rutas_venta", id);
-    const snap=await getDoc(ref);
-    if(snap.exists()){ rellenarTicket(snap.data()); imprimirTicketEstilado(); cerrarReimp(); }
-  });
-
   // ==== Botones ====
   document.getElementById('btnCobrar').onclick=abrirCobro;
   document.getElementById('btnCancelarCobro').onclick=cerrarCobro;
@@ -1216,6 +1165,80 @@ btnCorte.addEventListener("click", () => {
   window.open("corte.html", "_blank");
 });
 
+// ==== Reimpresión de Tickets (adaptada) ====
+import {
+  collection, getDocs, getDoc, query, orderBy, limit, doc
+} from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+
+const modalReimp = document.getElementById("modalReimp");
+const btnReimprimir = document.getElementById("btnReimprimir");
+const btnCerrarReimp = document.getElementById("btnCerrarReimp");
+const btnBuscar = document.getElementById("btnBuscar");
+const btnTodos = document.getElementById("btnTodos");
+const inputBuscar = document.getElementById("buscarFolio");
+const tablaTickets = document.getElementById("tablaTickets");
+
+btnReimprimir.addEventListener("click", () => {
+  modalReimp.style.display = "flex";
+  cargarTickets();
+});
+btnCerrarReimp.addEventListener("click", () => (modalReimp.style.display = "none"));
+
+async function cargarTickets(filtro = "") {
+  tablaTickets.innerHTML = "<tr><td colspan='5'>Cargando...</td></tr>";
+  const ref = collection(db, "rutas_venta");
+  const q = query(ref, orderBy("fecha", "desc"), limit(50));
+  const snap = await getDocs(q);
+
+  let data = [];
+  snap.forEach(d => data.push({ id: d.id, ...d.data() }));
+
+  if (filtro) {
+    const texto = filtro.toLowerCase();
+    data = data.filter(v =>
+      v.folio?.toLowerCase().includes(texto) ||
+      v.cliente?.toLowerCase().includes(texto)
+    );
+  }
+
+  if (data.length === 0) {
+    tablaTickets.innerHTML = "<tr><td colspan='5'>Sin resultados</td></tr>";
+    return;
+  }
+
+  tablaTickets.innerHTML = "";
+  data.forEach(v => {
+    const tr = document.createElement("tr");
+    tr.innerHTML = `
+      <td>${v.folio}</td>
+      <td>${v.fecha_txt || ""}</td>
+      <td>${v.cliente || "Mostrador"}</td>
+      <td>$${(v.total || 0).toFixed(2)}</td>
+      <td><button data-id="${v.id}" style="background:#00416A;color:#fff;">🖨️ Reimprimir</button></td>
+    `;
+    tablaTickets.appendChild(tr);
+  });
+}
+
+btnBuscar.onclick = () => cargarTickets(inputBuscar.value.trim());
+btnTodos.onclick = () => cargarTickets();
+
+tablaTickets.addEventListener("click", async (e) => {
+  const btn = e.target.closest("button[data-id]");
+  if (!btn) return;
+  const id = btn.getAttribute("data-id");
+
+  const ref = doc(db, "rutas_venta", id);
+  const snap = await getDoc(ref);
+  if (!snap.exists()) {
+    alert("No se encontró la venta seleccionada.");
+    return;
+  }
+  const venta = snap.data();
+  rellenarTicket(venta); // usa tu función ya existente
+  imprimirTicketEstilado();
+  modalReimp.style.display = "none";
+});
 
     // === CÁMARA / ESCÁNER ===
   const btnCam = document.getElementById("btnCam");
@@ -1381,35 +1404,37 @@ function render() {
     </div>
   </div>
 
-  <!-- 🔹 Modal Reimpresión de Tickets -->
-  <div id="modalReimp" style="display:none; position:fixed; inset:0; background:rgba(0,0,0,.45); z-index:1300; align-items:center; justify-content:center;">
-    <div class="modal-card" style="width:min(720px,96vw); background:#fff; border-radius:14px; box-shadow:0 10px 30px rgba(0,0,0,.25); overflow:hidden;">
-      <div class="modal-h" style="display:flex; align-items:center; justify-content:space-between; padding:12px 16px; background:#0c6cbd; color:#fff; font-weight:700;">
-        <span>Reimprimir tickets</span>
-        <button id="btnCerrarReimp" class="btn" style="background:#aaa; width:auto; padding:8px 12px; font-size:14px;">Cerrar</button>
+  <!-- 🔹 Modal Reimpresión de Tickets Integrado -->
+<div id="modalReimp" style="display:none; position:fixed; inset:0; background:rgba(0,0,0,.45); z-index:1500; align-items:center; justify-content:center;">
+  <div class="modal-card" style="width:min(800px,96vw); background:#fff; border-radius:14px; box-shadow:0 10px 30px rgba(0,0,0,.25); overflow:hidden;">
+    <div class="modal-h" style="display:flex; align-items:center; justify-content:space-between; padding:12px 16px; background:#0c6cbd; color:#fff; font-weight:700;">
+      <span>Reimpresión de Tickets</span>
+      <button id="btnCerrarReimp" class="btn" style="background:#aaa; width:auto; padding:8px 12px; font-size:14px;">Cerrar</button>
+    </div>
+    <div class="modal-b" style="padding:14px 16px;">
+      <div class="filters" style="display:flex; gap:10px; flex-wrap:wrap; margin-bottom:10px;">
+        <input id="buscarFolio" type="text" placeholder="Buscar por folio o cliente..." style="flex:1; padding:10px; border-radius:10px; border:1px solid #ccc;">
+        <button id="btnBuscar" class="btn" style="background:#0c6cbd;">Buscar</button>
+        <button id="btnTodos" class="btn" style="background:#1e8e3e;">Ver Todos</button>
       </div>
-      <div class="modal-b" style="padding:14px 16px; display:flex; flex-direction:column; gap:10px;">
-        <!-- Filtros -->
-        <div style="display:flex; gap:8px; flex-wrap:wrap;">
-          <input id="filtroFolio" type="text" placeholder="Buscar por folio o cliente..." style="flex:1; padding:10px; border-radius:10px; border:1px solid #e1e5ea;">
-          <input id="filtroFecha" type="date" style="padding:10px; border-radius:10px; border:1px solid #e1e5ea;">
-          <button id="btnBuscarTickets" class="btn" style="width:auto; padding:10px 12px; font-size:14px;">Buscar</button>
-        </div>
-
-        <!-- Lista -->
-        <div id="listaTickets" style="max-height:50vh; overflow:auto; border:1px solid #e5e7eb; border-radius:12px;">
-          <!-- Items renderizados por JS -->
-        </div>
-
-        <!-- Paginación simple -->
-        <div style="display:flex; gap:8px; justify-content:flex-end; align-items:center; margin-top:10px;">
-          <button id="btnPrevTickets" class="btn" style="width:auto; padding:8px 10px; font-size:14px; background:#64748b;">◀</button>
-          <span id="lblPagina" style="min-width:70px; text-align:center;">1</span>
-          <button id="btnNextTickets" class="btn" style="width:auto; padding:8px 10px; font-size:14px; background:#64748b;">▶</button>
-        </div>
+      <div style="max-height:50vh; overflow:auto; border:1px solid #e5e7eb; border-radius:10px;">
+        <table style="width:100%; border-collapse:collapse;">
+          <thead>
+            <tr style="background:#00416A; color:#fff;">
+              <th style="padding:8px;">Folio</th>
+              <th style="padding:8px;">Fecha</th>
+              <th style="padding:8px;">Cliente</th>
+              <th style="padding:8px;">Total</th>
+              <th style="padding:8px;">Acción</th>
+            </tr>
+          </thead>
+          <tbody id="tablaTickets"></tbody>
+        </table>
       </div>
     </div>
   </div>
+</div>
+
     <!-- 🔹 Área Ticket Imprimible -->
  <div id="ticketArea" style="display:none;">
     <div id="ticket" class="ticket">  
