--- a/POSMOVIL/index.html
+++ b/POSMOVIL/index.html
@@ -271,8 +271,55 @@ body {
 
   </main>
 </div>
+<!-- 📸 Librería QR -->
+<script src="./html5-qrcode.min.js"></script>
+
+<!-- 📦 Librería PDF -->
 <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
+
+<!-- 📷 Control de escáner QR -->
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const btnCam = document.getElementById("btnCam");
+    const camDiv = document.getElementById("qrReaderContainer");
+    const cerrarCam = document.getElementById("cerrarCam");
+    let html5QrCode = null;
+
+    btnCam.addEventListener("click", () => {
+      camDiv.style.display = "flex";
+      html5QrCode = new Html5Qrcode("reader");
+      html5QrCode.start(
+        { facingMode: "environment" },
+        { fps: 10, qrbox: 250 },
+        (decodedText) => {
+          console.log("📦 Código detectado:", decodedText);
+          const buscador = document.getElementById("buscador");
+          buscador.value = decodedText;
+          camDiv.style.display = "none";
+          html5QrCode.stop().then(() => {
+            console.log("✅ Cámara detenida");
+            const enterEvent = new KeyboardEvent("keydown", { key: "Enter" });
+            buscador.dispatchEvent(enterEvent);
+          });
+        },
+        (errorMessage) => console.log("⚠️", errorMessage)
+      ).catch((err) => {
+        alert("No se pudo abrir la cámara: " + err);
+        camDiv.style.display = "none";
+      });
+    });
+
+    cerrarCam.addEventListener("click", () => {
+      if (html5QrCode) {
+        html5QrCode.stop().then(() => camDiv.style.display = "none");
+      } else camDiv.style.display = "none";
+    });
+  });
+</script>
+
+<!-- Tu script principal de Firebase -->
 <script type="module">
+  
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
 import {
   getFirestore, collection, addDoc, setDoc, serverTimestamp, runTransaction, doc,
@@ -1240,17 +1287,6 @@ tablaTickets.addEventListener("click", async (e) => {
   imprimirTicketEstilado();
   modalReimp.style.display = "none";
 });
-
-    // === CÁMARA / ESCÁNER ===
-  const btnCam = document.getElementById("btnCam");
-
-  btnCam.addEventListener("click", async () => {
-    try {
-      if (!("BarcodeDetector" in window)) {
-        alert("Tu navegador no soporta BarcodeDetector. Usa Chrome/Edge móvil.");
-        return;
-      }
-
       const detector = new BarcodeDetector({ formats: ["code_128", "ean_13", "qr_code"] });
       const stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } });
 
@@ -1497,6 +1533,11 @@ function render() {
       <!-- Mensaje -->
       <div class="t-thanks" style="text-align:center; margin-top:8px; font-size:12px;">¡Gracias por su compra!</div>
     </div>
+</div>
+<!-- 🔹 Contenedor oculto para cámara -->
+<div id="qrReaderContainer" style="display:none; flex-direction:column; align-items:center; justify-content:center; position:fixed; inset:0; background:rgba(0,0,0,.8); z-index:3000;">
+  <div id="reader" style="width:90%; max-width:360px; margin:auto; background:#fff; border-radius:12px; padding:8px;"></div>
+  <button id="cerrarCam" class="btn" style="margin-top:12px;background:#c0392b;">Cerrar cámara</button>
 </div>
 
 <script>
