--- a/POSMOVIL/index.html
+++ b/POSMOVIL/index.html
@@ -671,7 +671,7 @@ const prod = {
   nombre: x.concepto || "SIN NOMBRE",
   codigo: (x.codigoBarra || "").toString(),
   precioPublico: Number(x.precioPublico || 0),
-  costoUnit: Number(x.costo || 0), // 👈 nuevo campo
+  costoUnit: Number(x.costoSinImpuesto || x.costo || 0),
   ivaTasa: Number(x.ivaTasa || 0),
   iepsTasa: Number(x.iepsTasa || 0),
   departamento_id: x.departamento_id || null
